--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@chroma-core/default-embed": "^0.1.8",
+    "@langchain/openai": "^0.0.14",
     "@playwright/test": "^1.54.2",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
