--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@langchain/openai": "^0.0.14",
     "bcryptjs": "^3.0.2",
     "chromadb": "^1.8.1",
+    "cohere-ai": "^7.18.1",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
