--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "setup-vector-db": "npx tsx scripts/setup-vector-db.ts"
   },
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.8",
+    "@langchain/openai": "^0.0.14",
     "@playwright/test": "^1.54.2",
     "@types/bcryptjs": "^2.4.6",
-    "@langchain/openai": "^0.0.14",
     "bcryptjs": "^3.0.2",
     "chromadb": "^1.8.1",
     "cohere-ai": "^7.18.1",
